# home_budget_app

./: Dockerfile  README.md  docker-compose.yml  env.example  openapi.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0a0d451e22e4_initial_schema.py  25b4bd8afff1_initial_schema.py  34c035e37e0c_deleted_test_field.py  6aa4a0514788_rename_expense_to_bill.py  896e942bc87a_added_top_up_field.py  ab63412887ef_test_environment_field.py  abfb62d1e907_renamed_expenses_to_bill.py
app/: Dockerfile  main.py
app/api/: auth.py  bills.py  categories.py  statistics.py
app/api/schema/: bill_schema.py  category_schema.py
app/db/: database.py  models.py
app/tests/: bills_tests.py  categories_tests.py  conftest.py  test_utils.py
app/utils/: security.py
